# AnalysisOfKnowledge.MathematicalModel

./: .gitignore  AnalysisOfKnowledge.MathematicalModel.sln  CMakeLists.txt  README.md
AnalysisOfKnowledge.MathematicalModel/: AnalysisOfKnowledge.MathematicalModel.csproj  Class1.cs
AnalysisOfKnowledge.MathematicalModel.Tests/: AnalysisOfKnowledge.MathematicalModel.Tests.csproj
AnalysisOfKnowledge.MathematicalModel.Tests/Models/: MatrixFunctionsTestSetModel.cs
AnalysisOfKnowledge.MathematicalModel.Tests/Tests/: MatrixDeterminantTest.cs  MatrixInvertTest.cs  MatrixMultiplicationTest.cs
AnalysisOfKnowledge.MathematicalModel/Exceptions/: ExceptionMessages.cs
AnalysisOfKnowledge.MathematicalModel/Extensions/: MatrixExtensions.cs
AnalysisOfKnowledge.MathematicalModel/Models/: ExceptionMessages.cs
AnalysisOfKnowledge.MathematicalModel/Models/Constants/: MatrixFunctionsConstants.cs
AnalysisOfKnowledge.MathematicalModel/Models/Delegates/: DomainDelegates.cs
AnalysisOfKnowledge.MathematicalModel/Processing/: AlgebraicMatrixFunctions.cs
AnalysisOfKnowledge.MathematicalModel/Processing/Interfaces/: IAlgebraicMatrixFunctions.cs  ICommonAlgebraicFunctions.cs
src/: algebraicOperations.c  dataTypes.c  matrixOperations.c
src/AlgebraicOperations/: algebraicOperations.c  matrixOperations.c  matrixOperations.h  primitiveTypes.c
src/AlgebraicOperations/header/: algebraicOperations.h  matrixOperations.h  primitiveTypes.h
src/headers/: algebraicOperations.h  dataTypes.h  matrixOperations.h
src/sdk/: testUtilities.c
tests/: CMakeLists.txt  main.c
(+2 files in other folders)
